final fixes with rendering